--- a/css/digitalLabel.scss
+++ b/css/digitalLabel.scss
@@ -8777,12 +8777,15 @@ body:has(.listGrid) .searchWrap {
 	line-height: 1.4;
 	h3 {
 		font-size: 32px;
+		line-height: 1.3125;
 		font-weight: bold;
 		margin-bottom: 24px;
+		color: #151515;
 	}
 	p {
 		font-size: 20px;
 		font-weight: 500;
+		color: #151515;
 	}
 	@media screen and (max-width: 768px) {
 		h3 {
@@ -8903,6 +8906,7 @@ body:has(.listGrid) .searchWrap {
 				font-size: 14px;
 				font-weight: 500;
 				color: #707070;
+				line-height: 1.42;
 			}
 			img {
 				width: 100%;
